--- a/public/styles/responsive.css
+++ b/public/styles/responsive.css
@@ -21,6 +21,14 @@
 	#page-home main {
 		align-items: center;
 	}
+
+	#page-search-results .cards {
+		grid-template-columns: 1fr;
+	}
+
+	#page-search-results .cards img {
+		height: 250px;
+	}
 }
 /*
 	Vai de 1700px de largura até o infinito...
