--- a/public/styles/responsive.css
+++ b/public/styles/responsive.css
@@ -29,6 +29,14 @@
 	#page-search-results .cards img {
 		height: 250px;
 	}
+
+	#page-create-point .field-group{
+		flex-direction: column;
+	}
+
+	#page-create-point .field-group .field + .field {
+		margin-left: 0;
+	}
 }
 /*
 	Vai de 1700px de largura até o infinito...
